customized by me

--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,11 +1,6 @@
 <% unless user_signed_in? %>
 	<div class="hero-unit">
-		<h1>Welcome to One Month Rails!</h1>
-		<p>
-			You've found the home page for the
-			<%= link_to "One Months Rails", "http://onemonthrails.com" %>
-			application. :)
-		</p>
+		<h1>Welcome to PicShare!</h1><br>
 		<p>
 			<%= link_to "Sing Up now!", new_user_registration_path, class: "btn btn-primary btn-large" %>
 		</p>
