--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,4 @@
 <h1>About</h1>
 <p>
-	<%= link_to "One Months Rails", "http://onemonthrails.com" %>
-	is a project to teach
-	<%= link_to "Ruby on Rails", "http://rubyonrails.org" %>
-	in one month. This is the sample application.
+	PicShare is a webapp to allow people to share their pics with other users.
 </p>
